@@ -67,6 +67,7 @@ public:
 	friend class Shape_file;
 	Shape_frame() : data(0), datalen(0)
 		{  }
+	unsigned char *get_data() { return data; }
 					// Read in shape/frame.
 	unsigned char read(DataSource& shapes, uint32 shapeoff,
 					uint32 shapelen, int frnum);
