@@ -1,3 +1,7 @@
+2001-07-05  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* Pre-render flat areas for each chunk.
+
 2001-07-04  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.h,npcedit.cc: ExultStudio can now add new NPC's to the
